src/objects/Profile_Right__c.object
<CustomObject>
    <fields>
        <fullName>Profile_Id__c</fullName>
        <label>Profile Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Widget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Widget</label>
        <referenceTo>Widget__c</referenceTo>
        <relationshipLabel>Profile Rights (Related Widget)</relationshipLabel>
        <relationshipName>Profile_Rights1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Widget__c</fullName>
        <label>Widget</label>
        <referenceTo>Widget__c</referenceTo>
        <relationshipLabel>Profile Rights</relationshipLabel>
        <relationshipName>Profile_Rights</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Profile Right</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Profile Rights</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>